--- a/workspace/lab2/1_cache_basics.ipynb
+++ b/workspace/lab2/1_cache_basics.ipynb
@@ -13,10 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a388fab2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0: What is your name?\n",
+      "\tSoojung Bae\n",
+      "1.0: What is your email address?\n",
+      "\tsjb565@mit.edu\n",
+      "1.0: What is your kerberos?\n",
+      "\tsjb565\n"
+     ]
+    }
+   ],
    "source": [
     "from loaders import *\n",
     "from copy import deepcopy\n",
@@ -26,19 +39,19 @@
     "answer(\n",
     "    question='1.0',\n",
     "    subquestion=f'What is your name?',\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 'Soojung Bae',\n",
     "    required_type=str,\n",
     ")\n",
     "answer(\n",
     "    question='1.0',\n",
     "    subquestion=f'What is your email address?',\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 'sjb565@mit.edu',\n",
     "    required_type=str,\n",
     ")\n",
     "answer(\n",
     "    question='1.0',\n",
     "    subquestion=f'What is your kerberos?',\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 'sjb565',\n",
     "    required_type=str,\n",
     ")"
    ]
@@ -69,10 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "steady-experiment",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[117, 88, 82, 97], [139, 148, 112, 152], [106, 119, 91, 141], [70, 116, 72, 118]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize values\n",
     "seed = 10\n",
@@ -86,7 +107,6 @@
     "a_MK = []\n",
     "for m in range(M):\n",
     "    a_MK.append([random.randint(1, 9) for i in range(K)])\n",
-    "\n",
     "\n",
     "# Matrix B (K x N)\n",
     "b_KN = []\n",
@@ -106,7 +126,7 @@
     "            t += a_MK[m][k] * b_KN[k][n]\n",
     "        temp.append(t)\n",
     "    c_MN.append(temp)\n",
-    "# print(c_MN)"
+    "print(c_MN)"
    ]
   },
   {
@@ -123,70 +143,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "unavailable-morgan",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "a read:  64\n",
+      "b read:  64\n",
+      "c read:  64\n",
+      "c write: 64\n"
+     ]
+    }
+   ],
    "source": [
     "# Loop nest for the matrix multiplication\n",
     "c = np.zeros((M, N))\n",
+    "a_rd, b_rd, c_rd, c_wr = 0, 0, 0, 0\n",
+    "\n",
     "for m in range(M):\n",
     "    for n in range(N):\n",
     "        for k in range(K):\n",
     "            # load a\n",
     "            a = a_MK[m][k]\n",
+    "            a_rd += 1\n",
     "\n",
     "            # load b\n",
     "            b = b_KN[k][n]\n",
+    "            b_rd += 1\n",
     "\n",
     "            # compute partial sum\n",
     "            c[m][n] += a * b\n",
+    "            c_rd += 1\n",
+    "            c_wr += 1\n",
     "\n",
     "# Check the result\n",
-    "print(np.all(c==np.asarray(c_MN)))"
+    "print(np.all(c==np.asarray(c_MN)))\n",
+    "print(f\"a read:  {a_rd}\")\n",
+    "print(f\"b read:  {b_rd}\")\n",
+    "print(f\"c read:  {c_rd}\")\n",
+    "print(f\"c write: {c_wr}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "585aba0c-ebaa-4f36-9b4d-e510644d7f92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.1: How many reads of A?\n",
+      "\t64\n",
+      "1.1: How many reads of B?\n",
+      "\t64\n",
+      "1.1: How many reads of C?\n",
+      "\t64\n",
+      "1.1: How many writes of A?\n",
+      "\t0\n",
+      "1.1: How many writes of B?\n",
+      "\t0\n",
+      "1.1: How many writes of C?\n",
+      "\t64\n"
+     ]
+    }
+   ],
    "source": [
     "answer(\n",
     "    question='1.1',\n",
     "    subquestion=f'How many reads of A?',\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 64,\n",
     "    required_type=int,\n",
     ")\n",
     "answer(\n",
     "    question='1.1',\n",
     "    subquestion=f'How many reads of B?',\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 64,\n",
     "    required_type=int,\n",
     ")\n",
     "answer(\n",
     "    question='1.1',\n",
     "    subquestion=f'How many reads of C?',\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 64,\n",
     "    required_type=int,\n",
     ")\n",
     "answer(\n",
     "    question='1.1',\n",
     "    subquestion=f'How many writes of A?',\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 0,\n",
     "    required_type=int,\n",
     ")\n",
     "answer(\n",
     "    question='1.1',\n",
     "    subquestion=f'How many writes of B?',\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 0,\n",
     "    required_type=int,\n",
     ")\n",
     "answer(\n",
     "    question='1.1',\n",
     "    subquestion=f'How many writes of C?',\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 64,\n",
     "    required_type=int,\n",
     ")"
    ]
@@ -205,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "dressed-occasion",
    "metadata": {},
    "outputs": [],
@@ -232,10 +293,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "collect-necklace",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2: Check if result is correct.\n",
+      "\tTrue\n",
+      "-------Cache A--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 48\n",
+      "cache wr: 0\n",
+      "mem rd: 16\n",
+      "mem wr: 0\n",
+      "-------Cache B--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 0\n",
+      "cache wr: 0\n",
+      "mem rd: 64\n",
+      "mem wr: 0\n",
+      "-------Cache C--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 48\n",
+      "cache wr: 64\n",
+      "mem rd: 16\n",
+      "mem wr: 64\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a main memory\n",
     "mem_log_size = 10\n",
@@ -254,21 +342,21 @@
     "        for k in range(K):\n",
     "\n",
     "            # Your code: modify addr_a \n",
-    "            addr_a = 0\n",
+    "            addr_a = m*K + k # (M, K)\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            a = read_addr(addr_a, memory, cache_a)\n",
     "            \n",
     "            # Your code: modify addr_b\n",
-    "            addr_b = 0\n",
+    "            addr_b = M*K + k*N + n # (K, N) + offset M*K\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            b = read_addr(addr_b, memory, cache_b)\n",
     "            \n",
     "            # Your code: modify addr_c\n",
-    "            addr_c = 0\n",
+    "            addr_c = M*K + K*N + m*N + n # (M,N)\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
@@ -828,7 +916,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
