--- a/workspace/lab2/1_cache_basics.ipynb
+++ b/workspace/lab2/1_cache_basics.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "a388fab2",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "steady-experiment",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "unavailable-morgan",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "585aba0c-ebaa-4f36-9b4d-e510644d7f92",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "dressed-occasion",
    "metadata": {},
    "outputs": [],
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "collect-necklace",
    "metadata": {},
    "outputs": [
@@ -396,10 +396,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "yellow-israeli",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3: Check if result is correct.\n",
+      "\tTrue\n",
+      "-------Cache A--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 56\n",
+      "cache wr: 0\n",
+      "mem rd: 8\n",
+      "mem wr: 0\n",
+      "-------Cache B--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 0\n",
+      "cache wr: 0\n",
+      "mem rd: 64\n",
+      "mem wr: 0\n",
+      "-------Cache C--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 56\n",
+      "cache wr: 64\n",
+      "mem rd: 8\n",
+      "mem wr: 64\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a main memory\n",
     "mem_log_size = 10\n",
@@ -418,21 +445,21 @@
     "        for k in range(K):\n",
     "\n",
     "            # Your code: modify addr_a \n",
-    "            addr_a = 0\n",
+    "            addr_a =  m*K + k \n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            a = read_addr(addr_a, memory, cache_a)\n",
     "            \n",
     "            # Your code: modify addr_b\n",
-    "            addr_b = 0\n",
+    "            addr_b = M*K + k*N + n\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            b = read_addr(addr_b, memory, cache_b)\n",
     "            \n",
     "            # Your code: modify addr_c\n",
-    "            addr_c = 0\n",
+    "            addr_c = M*K + K*N + m*N + n\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
@@ -461,15 +488,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "770bff47-91c6-4c0f-8c2b-760dfd819a3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.3: The larger block size exploits _____ locality.\n",
+      "\tspatial\n"
+     ]
+    }
+   ],
    "source": [
     "answer(\n",
     "    question='1.3',\n",
     "    subquestion=\"The larger block size exploits _____ locality.\",\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 'spatial',\n",
     "    required_type=('spatial', 'temporal')\n",
     ")"
    ]
@@ -486,10 +522,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "speaking-career",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4: Check if result is correct.\n",
+      "\tTrue\n",
+      "-------Cache A--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 56\n",
+      "cache wr: 0\n",
+      "mem rd: 8\n",
+      "mem wr: 0\n",
+      "-------Cache B--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 32\n",
+      "cache wr: 0\n",
+      "mem rd: 32\n",
+      "mem wr: 0\n",
+      "-------Cache C--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 56\n",
+      "cache wr: 64\n",
+      "mem rd: 8\n",
+      "mem wr: 64\n"
+     ]
+    }
+   ],
    "source": [
     "mem_log_size = 10\n",
     "memory_col = np.zeros(2**mem_log_size).astype(np.int32)\n",
@@ -507,21 +570,21 @@
     "        for k in range(K):\n",
     "\n",
     "            # Your code: modify addr_a \n",
-    "            addr_a = 0\n",
+    "            addr_a = m*K + k\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            a = read_addr(addr_a, memory_col, cache_a)\n",
     "            \n",
     "            # Your code: modify addr_b\n",
-    "            addr_b = 0\n",
+    "            addr_b = M*K + n*K + k # (N,K)\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            b = read_addr(addr_b, memory_col, cache_b)\n",
     "            \n",
     "            # Your code: modify addr_c\n",
-    "            addr_c = 0\n",
+    "            addr_c = M*K + K*N + m*N + n\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
@@ -550,29 +613,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "02cd35a7-2128-4273-b40e-983f0f75c4ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.4: Arranging B in column-major order creates _____ locality in the access pattern of B.\n",
+      "\tspatial\n",
+      "1.4: The traversal pattern due to the M, N, K loop nest is ____ with the row-major format of B.\n",
+      "\tdiscordant\n",
+      "1.4: The traversal pattern due to the M, N, K loop nest is ____ with the column-major format of B. Answer with 'discordant' or 'concordant'\n",
+      "\tconcordant\n"
+     ]
+    }
+   ],
    "source": [
     "answer(\n",
     "    question='1.4',\n",
     "    subquestion=\"Arranging B in column-major order creates _____ locality in the access pattern of B.\",\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 'spatial',\n",
     "    required_type=('spatial', 'temporal')\n",
     ")\n",
     "\n",
     "answer(\n",
     "    question='1.4',\n",
     "    subquestion=\"The traversal pattern due to the M, N, K loop nest is ____ with the row-major format of B.\",\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 'discordant',\n",
     "    required_type=('discordant', 'concordant')\n",
     ")\n",
     "\n",
     "answer(\n",
     "    question='1.4',\n",
     "    subquestion=\"The traversal pattern due to the M, N, K loop nest is ____ with the column-major format of B. Answer with 'discordant' or 'concordant'\",\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 'concordant',\n",
     "    required_type=('discordant', 'concordant')\n",
     ")"
    ]
@@ -600,10 +676,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "modified-workshop",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5: Check if result is correct.\n",
+      "\tTrue\n",
+      "-------Cache A--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 0\n",
+      "cache wr: 0\n",
+      "mem rd: 64\n",
+      "mem wr: 0\n",
+      "-------Cache B--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 48\n",
+      "cache wr: 0\n",
+      "mem rd: 16\n",
+      "mem wr: 0\n",
+      "-------Cache C--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 0\n",
+      "cache wr: 64\n",
+      "mem rd: 64\n",
+      "mem wr: 64\n"
+     ]
+    }
+   ],
    "source": [
     "mem_log_size = 10\n",
     "memory = np.zeros(2**mem_log_size).astype(np.int32)\n",
@@ -619,21 +722,21 @@
     "    for n in range(N):\n",
     "        for m in range(M):\n",
     "            # Your code: modify addr_a \n",
-    "            addr_a = 0\n",
+    "            addr_a = m*K + k\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            a = read_addr(addr_a, memory, cache_a)\n",
     "            \n",
-    "            # Your code: modify addr_a \n",
-    "            addr_b = 0\n",
+    "            # Your code: modify addr_b\n",
+    "            addr_b = M*K + k*N + n\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            b = read_addr(addr_b, memory, cache_b)\n",
     "            \n",
-    "            # Your code: modify addr_a \n",
-    "            addr_c = 0\n",
+    "            # Your code: modify addr_c\n",
+    "            addr_c = M*K + K*N + m*N + n\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
@@ -663,33 +766,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "a5fa4c61-363c-404b-81ca-cac5e75acc32",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5: Does the cache for tensor A have (1) compulsory, (2) capacity, and (3) conflict misses? Please write your answer (True/False in Python) in order as a list (e.g., [True, False, True]).\n",
+      "\t[True, True, True]\n",
+      "1.5: Does the cache for tensor B have (1) compulsory, (2) capacity, and (3) conflict misses? Please write your answer (True/False in Python) in order as a list (e.g., [True, False, True]).\n",
+      "\t[True, False, False]\n",
+      "1.5: Does the cache for tensor C have conflict misses? Please write your answer (True/False in Python).\n",
+      "\tTrue\n",
+      "1.5: Assume for this subquestion that address conflicts can be completely avoided by adding some mechanism in the cache for tensor C, would there still be (1) compulsory and (2) capacity misses? Please write your answer (True/False in Python) in order as a list (e.g., [False, True]).\n",
+      "\t[True, True]\n"
+     ]
+    }
+   ],
    "source": [
     "answer(\n",
     "    question='1.5',\n",
     "    subquestion=\"Does the cache for tensor A have (1) compulsory, (2) capacity, and (3) conflict misses? Please write your answer (True/False in Python) in order as a list (e.g., [True, False, True]).\",\n",
-    "    answer= ['FILL ME', 'FILL ME', 'FILL ME'], # Answer here\n",
+    "    answer= [True, True, True], # Answer here\n",
     "    required_type=[bool, bool, bool],\n",
-    ")\n",
+    ") #TODO: Think more\n",
     "answer(\n",
     "    question='1.5',\n",
     "    subquestion=\"Does the cache for tensor B have (1) compulsory, (2) capacity, and (3) conflict misses? Please write your answer (True/False in Python) in order as a list (e.g., [True, False, True]).\",\n",
-    "    answer= ['FILL ME', 'FILL ME', 'FILL ME'], # Answer here\n",
+    "    answer= [True, False, False], # Answer here\n",
     "    required_type=[bool, bool, bool],\n",
     ")\n",
     "answer(\n",
     "    question='1.5',\n",
     "    subquestion=\"Does the cache for tensor C have conflict misses? Please write your answer (True/False in Python).\",\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= True,\n",
     "    required_type=bool,\n",
     ")\n",
     "answer(\n",
     "    question='1.5',\n",
     "    subquestion=\"Assume for this subquestion that address conflicts can be completely avoided by adding some mechanism in the cache for tensor C, would there still be (1) compulsory and (2) capacity misses? Please write your answer (True/False in Python) in order as a list (e.g., [False, True]).\",\n",
-    "    answer= ['FILL ME', 'FILL ME'], # Answer here\n",
+    "    answer= [True, True], # Answer here\n",
     "    required_type=[bool, bool],\n",
     ")"
    ]
@@ -718,10 +836,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "hundred-rings",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6: Check if result is correct.\n",
+      "\tTrue\n",
+      "-------Cache--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 108\n",
+      "cache wr: 64\n",
+      "mem rd: 84\n",
+      "mem wr: 64\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a main memory\n",
     "mem_log_size = 10\n",
@@ -738,21 +871,21 @@
     "        for k in range(K):\n",
     "\n",
     "            # Your code: modify addr_a \n",
-    "            addr_a = 0\n",
+    "            addr_a = m*K + k\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            a = read_addr(addr_a, memory, cache)\n",
     "            \n",
     "            # Your code: modify addr_b\n",
-    "            addr_b = 0\n",
+    "            addr_b = M*K + k*N + n\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            b = read_addr(addr_b, memory, cache)\n",
     "            \n",
     "            # Your code: modify addr_c\n",
-    "            addr_c = 0\n",
+    "            addr_c = M*K + K*N + m*M + n\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
@@ -781,15 +914,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "b13f9ba4-88e7-4110-bdfe-9ffab0549454",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6: Compared to using three separate caches, the number of misses has increased. This increase is due to more ___ misses.\n",
+      "\tconflict\n"
+     ]
+    }
+   ],
    "source": [
     "answer(\n",
     "    question='1.6',\n",
     "    subquestion=\"Compared to using three separate caches, the number of misses has increased. This increase is due to more ___ misses.\",\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 'conflict',\n",
     "    required_type=('compulsory', 'conflict', 'capacity')\n",
     ")"
    ]
@@ -806,10 +948,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "acceptable-terrorist",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7: Check if result is correct.\n",
+      "\tTrue\n",
+      "-------Cache--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 126\n",
+      "cache wr: 64\n",
+      "mem rd: 66\n",
+      "mem wr: 64\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a main memory\n",
     "mem_log_size = 10\n",
@@ -826,21 +983,21 @@
     "        for k in range(K):\n",
     "\n",
     "            # Your code: modify addr_a \n",
-    "            addr_a = 0\n",
+    "            addr_a = m*K + k\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            a = read_addr(addr_a, memory, cache)\n",
     "            \n",
     "            # Your code: modify addr_b\n",
-    "            addr_b = 0\n",
+    "            addr_b = M*K + k*N + n\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
     "            b = read_addr(addr_b, memory, cache)\n",
     "            \n",
     "            # Your code: modify addr_c\n",
-    "            addr_c = 0\n",
+    "            addr_c = M*K + K*N + m*N + n\n",
     "            ########################\n",
     "            #### YOUR CODE HERE ####\n",
     "            ########################\n",
@@ -869,22 +1026,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "0fd3a5ac-88b8-425f-9623-b5394a7d256e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7: Compared to using one cache, the set-associative cache reduces misses.\n",
+      "\tTrue\n",
+      "1.7: Set-associative caches are beneficial for reducing _____ misses.\n",
+      "\tconflict\n"
+     ]
+    }
+   ],
    "source": [
     "answer(\n",
     "    question='1.7',\n",
     "    subquestion=\"Compared to using one cache, the set-associative cache reduces misses.\",\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= True,\n",
     "    required_type=bool,\n",
     ")\n",
     "\n",
     "answer(\n",
     "    question='1.7',\n",
     "    subquestion=\"Set-associative caches are beneficial for reducing _____ misses.\",\n",
-    "    answer= 'FILL ME',\n",
+    "    answer= 'conflict',\n",
     "    required_type=('compulsory', 'conflict', 'capacity'),\n",
     ")"
    ]
