--- a/workspace/lab2/3_cache_design.ipynb
+++ b/workspace/lab2/3_cache_design.ipynb
@@ -70,9 +70,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "da4253262e864a15b70accde94cf186e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='style', options=('tree', 'uncompressed', 'tree+uncompressed'), val…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f846f42173d4a339ce374659c542c31",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Run all cells below', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Run boilerplate code to set up environment\n",
     "from copy import deepcopy\n",
@@ -88,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -124,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,9 +215,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix Multiply\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Progress: 100%|██████████| 64/64 [00:21<00:00,  3.01it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Matrix Multiply\")\n",
     "\n",
@@ -235,7 +293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Question 9 \n",
+    "#### Question 9 \n",
     "\n",
     "Modify caches and loop nest below for your design. Run the cache profiler, and report the total area and energy. "
    ]
@@ -244,19 +302,64 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Your Code: Utility function for addressing"
+    "## Report: Design Strategy\n",
+    "1) Pseudo-code for my loopnest choice:\n",
+    "~~~\n",
+    "for k1 in range(K1=16):\n",
+    "    for m1 in range(M1=8):\n",
+    "\t# A_tile changes each step of this for loop iteration (when m1 or k1 changes)\n",
+    "\t# A_tile reads brand new set of (M0, K0)= (8, 16) sized tile\n",
+    "\n",
+    "        for n1 in range(N1=8):\n",
+    "\t        - B_tile changes each step of this for loop iteration with size of (K0, N0) = (16, 8)\n",
+    "            - tile moves in N-direction reading a brand-new set of tile\n",
+    "\n",
+    "            - C_tile changes each step of this for loop iteration with size of (M0, N0) = (8, 8)\n",
+    "            - tile moves in N-direction reading a brand-new set of tile\n",
+    "\n",
+    "            for m0 in range(M0=8):\n",
+    "                for n0 in range(N0=8):\n",
+    "                    for k0 in range(K0=16):\n",
+    "                        # compulsory cache misses can appear but after one cycle data (tiles) are reused\n",
+    "                        # compulsory reads: read A_tile, B_tile, C_tile as defined above.\n",
+    "                        # c += a * b operation performed in sequence (for C, read and write-through)\n",
+    "~~~\n",
+    "I assumed that for each A, B, C tile with size of (M0, K0), (K0, N0), and (M0, N0) respectively, the entire tile will fit into each cache without address conflicts. Normally, since default flattened addressing would easily cause address conflicts, I've created a very specialized address mapping that avoids conflict misses without using set associative cache to save area:\n",
+    "1. For B, I added transpose option for getAddress such that B is shape (N, K) and sweep through K dimension becomes row-major order. To exploit this, I've made words_per_line for each cache to exactly be the 'tile width', or the length of consecutive reads for the lowest looping dimension. This makes subsequent reads of the same line within the tile be cached.\n",
+    "2. Normal mapping causes problem when the \"subsequent line\" of the tile is read. Since the width of the tensor is a multiple of the number of lines in cache, next line will cause conflict misses. To avoid this, I used a very specific raster pattern address mapping, where the next line within the tile to read will exactly be adjacent to the previous line in the address space. This prevents conflict misses completely while being a 1-to-1 address mapping and hence implementable. In real-world scenarios, this wouldn't be desirable due to highly inflexible design.\n",
+    "3. To decide looping order, since cache A and B is larger than C, I prioritized making the loopnest stationary for larger tensors (A or B, A chosen for here) while B and C tiles are looped faster.\n",
+    "   \n",
+    "#### Q) Improve Energy Consumption?\n",
+    "\n",
+    "Memory Access (both read and write) is most energy-demanding. In this end, Tensor C's memory write (1048576 operations) consume around 0.538mJ, or ~95% of the total energy. This number cannot be reduced if the current write-through policy is kept. We can change cache C to use write-back policy, in which partial sums are written back only if it is being evicted from the cache, which will dramatically reduce the total energy consumption."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Your Code: Utility function for addressing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Modify this function if necessary (e.g., different memory addressing)\n",
     "\n",
-    "def getAddress(tensor, x, y):\n",
-    "    return (x*tensor.getShape()[1]+y)"
+    "def getAddress(tensor, x, y, width = 16, transpose=False):\n",
+    "    row, col = tensor.getShape()\n",
+    "    height = row if not transpose else col\n",
+    "    if transpose:\n",
+    "        x, y= y, x\n",
+    "\n",
+    "    return (height*width)*(y//width)+(y%width)+width*x\n",
+    "    \n",
+    "    #if transpose:\n",
+    "    #    return  (y*tensor.getShape()[0]+x)\n",
+    "    #return (x*tensor.getShape()[1]+y)"
    ]
   },
   {
@@ -275,16 +378,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define your caches; minimum size is log_size=6\n",
     "# You can use any number of separate caches, as far as they meet area and energy constraints\n",
     "\n",
-    "cache_a = Cache(log_size=6, words_per_line=1)\n",
-    "cache_b = Cache(log_size=6, words_per_line=1)\n",
-    "cache_c = Cache(log_size=6, words_per_line=1)\n",
+    "cache_a = Cache(log_size=7, words_per_line=16)\n",
+    "cache_b = Cache(log_size=7, words_per_line=16)\n",
+    "cache_c = Cache(log_size=6, words_per_line=8)\n",
     "\n",
     "# List all caches you are using\n",
     "caches = [cache_a, cache_b, cache_c]"
@@ -299,9 +402,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrix Multiply\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Progress: 100%|██████████| 1024/1024 [04:22<00:00,  3.90it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done!\n",
+      "-------Cache A--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 1047552\n",
+      "cache wr: 0\n",
+      "mem rd: 1024\n",
+      "mem wr: 0\n",
+      "-------Cache B--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 1040384\n",
+      "cache wr: 0\n",
+      "mem rd: 8192\n",
+      "mem wr: 0\n",
+      "-------Cache C--------\n",
+      "Cache Statistics:\n",
+      "cache rd: 1040384\n",
+      "cache wr: 73728\n",
+      "mem rd: 8192\n",
+      "mem wr: 1048576\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Tiling Size: Modify this to change tiling\n",
     "\n",
@@ -354,9 +504,9 @@
     "                        logger(f\"Processing B({k},{n}) = {b[k][n].payload}\")\n",
     "                        logger(f\"Processing Z({m},{n}) = {z[m][n]}\")\n",
     "\n",
-    "                        cache_c.load(getAddress(z, m, n))\n",
-    "                        cache_a.load(getAddress(a, m, k))\n",
-    "                        cache_b.load(getAddress(b, k, n))\n",
+    "                        cache_c.load(getAddress(z, m, n, 8))\n",
+    "                        cache_a.load(getAddress(a, m, k, 16))\n",
+    "                        cache_b.load(getAddress(b, k, n, 16, True))\n",
     "\n",
     "                        z[m][n] += a[m][k] * b[k][n]\n",
     "\n",
@@ -394,9 +544,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cache 1 Energy: 0.0068 mj, Area: 4767.25 um^2\n",
+      "Cache 2 Energy: 0.0105 mj, Area: 4767.25 um^2\n",
+      "Cache 3 Energy: 0.5432 mj, Area: 1685.26 um^2\n",
+      "Total Energy: 0.5606 mj, Area: 11219.76 um^2\n",
+      "3.1.1: \n",
+      "\tTrue\n",
+      "3.1.1: \n",
+      "\tTrue\n",
+      "3.1.1: \n",
+      "\tTrue\n",
+      "3.1.1: \n",
+      "\tTrue\n",
+      "3.1.1: \n",
+      "\tTrue\n",
+      "3.1.2: \n",
+      "\tTrue\n",
+      "3.1.2: \n",
+      "\tTrue\n",
+      "3.1.2: \n",
+      "\tTrue\n",
+      "3.1.2: \n",
+      "\tTrue\n",
+      "3.1.2: \n",
+      "\tTrue\n"
+     ]
+    }
+   ],
    "source": [
     "# You do not need to change any of this part.\n",
     "from cache_profiler import CacheProfiler\n",
@@ -478,6 +659,13 @@
     "    required_type=bool,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
